--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,6 @@
 
     <groupId>com.bazaarvoice.soa</groupId>
     <artifactId>soa-core</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>core</name>
@@ -32,6 +31,11 @@
             <groupId>com.bazaarvoice.zookeeper</groupId>
             <artifactId>zookeeper-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
 
         <dependency>
