--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.bazaarvoice.ostrich</groupId>
         <artifactId>ostrich</artifactId>
-        <version>1.7.1</version>
+        <version>1.7.2-beta</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -38,8 +38,8 @@
         </dependency>
 
         <dependency>
-            <groupId>commons-pool</groupId>
-            <artifactId>commons-pool</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
         </dependency>
 
         <dependency>
