--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.bazaarvoice.ostrich</groupId>
     <artifactId>ostrich</artifactId>
-    <version>1.7.1</version>
+    <version>1.7.2-beta</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -71,9 +71,9 @@
             </dependency>
 
             <dependency>
-                <groupId>commons-pool</groupId>
-                <artifactId>commons-pool</artifactId>
-                <version>1.6</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.2</version>
             </dependency>
 
             <dependency>
