--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
             </dependency>
 
             <dependency>
-                <groupId>commons-pool</groupId>
-                <artifactId>commons-pool</artifactId>
-                <version>1.6</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.2</version>
             </dependency>
 
             <dependency>
