--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
                     </suppressionFile>
                 </configuration>
             </plugin>
+            <!-- Specify version here because pluginManagement doesn't override plugin version in profile -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -91,7 +97,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.1</version>
                     <configuration>
                         <doclint>none</doclint>
                     </configuration>
