--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.minimum.version>1.7</java.minimum.version>
-        <curator.extensions.version>1.5.2</curator.extensions.version>
-        <dropwizard.version>[0.8.0,0.9.3]</dropwizard.version>
+        <java.minimum.version>1.8</java.minimum.version>
+        <curator.extensions.version>2.0.0</curator.extensions.version>
+        <dropwizard.version>1.3.7</dropwizard.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <jackson.version>2.9.6</jackson.version>
+        <jackson.version>2.9.7</jackson.version>
         <jetty.version>9.4.12.v20180830</jetty.version>
     </properties>
 
@@ -85,8 +85,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.0</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <compilerArgument>-Xlint:all</compilerArgument>
                         <showWarnings>true</showWarnings>
                         <showDeprecation>true</showDeprecation>
@@ -114,9 +114,9 @@
             </dependency>
 
             <dependency>
-                <groupId>com.codahale.metrics</groupId>
+                <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
-                <version>3.0.2</version>
+                <version>4.0.2</version>
             </dependency>
 
             <dependency>
@@ -233,7 +233,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>2.21.0</version>
+                <version>2.23.0</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
