--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.minimum.version>1.8</java.minimum.version>
-        <curator.extensions.version>2.0.0</curator.extensions.version>
+        <curator.extensions.version>2.0.1</curator.extensions.version>
         <dropwizard.version>1.3.7</dropwizard.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <jackson.version>2.9.7</jackson.version>
+        <jackson.version>2.9.8</jackson.version>
         <jetty.version>9.4.12.v20180830</jetty.version>
+        <dependency-check-maven.version>3.3.4</dependency-check-maven.version>
+        <dependency.check.skip>false</dependency.check.skip>
     </properties>
 
     <build>
@@ -54,8 +56,9 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>3.3.1</version>
+                <version>${dependency-check-maven.version}</version>
                 <configuration>
+                    <skip>${dependency.check.skip}</skip>
                     <failBuildOnCVSS>6</failBuildOnCVSS>
                     <suppressionFile>
                         ${session.executionRootDirectory}/owasp-suppression.xml
@@ -85,8 +88,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>${java.minimum.version}</source>
+                        <target>${java.minimum.version}</target>
                         <compilerArgument>-Xlint:all</compilerArgument>
                         <showWarnings>true</showWarnings>
                         <showDeprecation>true</showDeprecation>
@@ -233,7 +236,7 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>2.23.0</version>
+                <version>2.23.4</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
