--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.bazaarvoice.commons</groupId>
         <artifactId>bv-opensource-super-pom</artifactId>
-        <version>1.4</version>
+        <version>1.9</version>
     </parent>
 
     <groupId>com.bazaarvoice.ostrich</groupId>
@@ -30,13 +30,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.minimum.version>1.8</java.minimum.version>
-        <curator.extensions.version>2.0.1</curator.extensions.version>
-        <dropwizard.version>1.3.7</dropwizard.version>
+        <curator.extensions.version>2.1.2</curator.extensions.version>
+        <dropwizard.version>1.3.17</dropwizard.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <jackson.version>2.9.8</jackson.version>
-        <jetty.version>9.4.12.v20180830</jetty.version>
-        <dependency-check-maven.version>3.3.4</dependency-check-maven.version>
+        <jackson.version>2.10.2</jackson.version>
         <dependency.check.skip>false</dependency.check.skip>
     </properties>
 
@@ -56,13 +54,9 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>${dependency-check-maven.version}</version>
                 <configuration>
                     <skip>${dependency.check.skip}</skip>
                     <failBuildOnCVSS>6</failBuildOnCVSS>
-                    <suppressionFile>
-                        ${session.executionRootDirectory}/owasp-suppression.xml
-                    </suppressionFile>
                 </configuration>
             </plugin>
             <!-- Specify version here because pluginManagement doesn't override plugin version in profile -->
@@ -74,19 +68,11 @@
         </plugins>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.5.3</version>
-                    <configuration>
-                        <dryRun>false</dryRun>
-                    </configuration>
-                </plugin>
 
                 <!-- Make sure we always turn all warnings on during compilation. -->
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <source>${java.minimum.version}</source>
                         <target>${java.minimum.version}</target>
@@ -104,6 +90,12 @@
                         <doclint>none</doclint>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.2.1</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -113,13 +105,13 @@
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>24.1.1-jre</version>
+                <version>28.0-jre</version>
             </dependency>
 
             <dependency>
                 <groupId>io.dropwizard.metrics</groupId>
                 <artifactId>metrics-core</artifactId>
-                <version>4.0.2</version>
+                <version>4.0.5</version>
             </dependency>
 
             <dependency>
@@ -185,58 +177,16 @@
             </dependency>
 
             <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-util</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-http</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-server</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-webapp</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-servlet</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-servlets</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-continuation</artifactId>
-                <version>${jetty.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>4.13</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>2.23.4</version>
+                <version>3.2.4</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
